force-app/main/default/classes/Controllers Apex/objects/Book__c/fields/address__c.field-meta.xml
<CustomField>
    <fullName>address__c</fullName>
    <label>address</label>
    <type>Address</type>
</CustomField>