force-app/main/default/classes/Controllers Apex/objects/Book__c/fields/Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Book_Name__c</fullName>
    <label>Book_Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>