force-app/main/default/classes/Controllers Apex/objects/Book__c/fields/empll__c.field-meta.xml
<CustomField>
    <fullName>empll__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>books</relationshipLabel>
    <relationshipName>books</relationshipName>
    <type>Lookup</type>
</CustomField>